--- a/public/locales/fr/questions.json
+++ b/public/locales/fr/questions.json
@@ -3,11 +3,7 @@
     "questions": {
         "cost": {
             "question": "Combien coûte un site web ?",
-            "answer": "Le tarif dépend surtout du type de projet et du niveau de personnalisation. Pour vous donner une idée, une landing page est à partir de 500€ tandis qu'une version plus aboutie, optimisée pour la conversion, se situe plutôt entre 1000€ et 1500€. Un site vitrine coûte généralement entre 1500€ et 3000€. Pour les projets plus complexes, nous pourrons discuter ensemble du budget."
-        },
-        "why_higher": {
-            "question": "Pourquoi vos tarifs peuvent sembler plus élevés qu'ailleurs ?",
-            "answer": "Le processus que j'utilise pour construire votre site web prend un certain temps car il nécessite beaucoup de planning et de recherche. Contrairement à d'autres collègues, je n'utilise pas de templates. Votre site web est construit à partir de zéro, ce qui signifie que vous obtenez un résultat unique adapté à votre demande. M'acheter un site web ne doit pas simplement être vu comme une dépense mais plutôt comme un investissement. C'est un outil de vente qui vous rapportera de l'argent à terme et vous remboursera largement le coût initial."
+            "answer": "Chaque projet étant unique, le prix varie en fonction de vos besoins : design personnalisé, fonctionnalités spécifiques, complexité technique... Plus vous me communiquez d'informations sur votre projet, plus je peux vous établir un devis précis et transparent. N'hésitez pas à me contacter pour en discuter !"
         },
         "how_long": {
             "question": "Combien de temps faut-il pour créer un site ?",
