--- a/public/locales/en/hero.json
+++ b/public/locales/en/hero.json
@@ -1,4 +1,4 @@
 {
-    "subtitle": "independent web developer at the service of your success",
+    "subtitle": "freelance web developer bringing your ideas to life",
     "technologies": "React - Next - TypeScript - Tailwind"
 }
