--- a/public/locales/en/navigation.json
+++ b/public/locales/en/navigation.json
@@ -5,5 +5,5 @@
     "projects": "Projects",
     "reviews": "Reviews",
     "services": "Services",
-    "questions": "Questions"
+    "questions": "FAQ"
 }
