--- a/public/locales/fr/questions.json
+++ b/public/locales/fr/questions.json
@@ -7,7 +7,7 @@
         },
         "how_long": {
             "question": "Combien de temps faut-il pour créer un site ?",
-            "answer": "Une landing page peut être créée en environ 1 semaine, tandis qu'un site vitrine prend généralement entre 3 et 6 semaines selon la taille du projet et la réactivité des échanges. Les projets plus complexes, la durée est définie au cas par cas après analyse, car chaque projet est unique."
+            "answer": "Une landing page peut être créée en 3 jours, tandis qu'un site vitrine prend une semaine. Un projet plus complexe avec une API prend plusieurs semaines selon la taille du projet et la réactivité des échanges."
         },
         "communication": {
             "question": "Comment se déroule la communication pendant le projet ?",
