--- a/public/locales/en/services.json
+++ b/public/locales/en/services.json
@@ -7,7 +7,7 @@
             "subtitle": "I create websites that inspire trust and convert your visitors into clients.",
             "description": {
                 "unique": "Every project is unique: I adapt to your identity, goals, and budget.",
-                "mockup": "With or without mockups: I can work from your designs or create them with a partner designer."
+                "mockup": "With or without mockups: I can work from your designs or create them myself."
             },
             "examples": {
                 "showcase": "- Showcase website for your business or company.",
