--- a/public/locales/fr/services.json
+++ b/public/locales/fr/services.json
@@ -7,7 +7,7 @@
             "subtitle": "Je crée des sites qui inspirent confiance et convertissent vos visiteurs en clients.",
             "description": {
                 "unique": "Chaque projet est unique : je m'adapte à votre identité, vos objectifs et votre budget.",
-                "mockup": "Avec ou sans maquette : je peux travailler à partir de vos designs ou en créer avec un designer partenaire."
+                "mockup": "Avec ou sans maquette : je peux travailler à partir de vos designs ou le créer moi-même."
             },
             "examples": {
                 "showcase": "- Site vitrine pour votre activité ou entreprise.",
