--- a/public/locales/en/questions.json
+++ b/public/locales/en/questions.json
@@ -1,33 +1,53 @@
 {
     "title": "FAQ",
     "questions": {
+        "services": {
+            "question": "What types of services do you offer?",
+            "answer": "I offer three types of services: custom website creation (landing pages, showcase websites, etc.), maintenance of existing websites, and long-term freelance integration within tech teams as a front-end developer. Depending on your needs, I can work on a one-time project or join your team for several months."
+        },
+        "freelance_mission": {
+            "question": "How does a freelance assignment within a team work?",
+            "answer": "I integrate into your existing team to strengthen your front-end development capabilities. I adapt to your processes, tools (Git, Jira, Slack...) and methodologies (Agile, Scrum...). I participate in daily meetings, code reviews, and sprints as a full-fledged team member. The goal is to deliver value quickly while respecting your quality standards."
+        },
+        "tjm": {
+            "question": "What is your daily rate?",
+            "answer": "My daily rate varies depending on the assignment duration, complexity, and technologies used. For long-term assignments (3 months or more), I offer preferential rates. Contact me to discuss your project and get a personalized quote."
+        },
+        "availability": {
+            "question": "What is your availability?",
+            "answer": "For long-term assignments, I'm available immediately. For website creation, my availability depends on my current projects: if I have one ongoing, you'll be next on my list. Feel free to contact me to confirm my current availability."
+        },
+        "tech_stack": {
+            "question": "What technologies do you work with?",
+            "answer": "I specialize in the modern JavaScript ecosystem: React, Next.js, TypeScript, Tailwind CSS. I also have experience with GraphQL, Redux, Jest, Cypress, and other front-end tools. I adapt quickly to new frameworks when the project requires it."
+        },
+        "remote_onsite": {
+            "question": "Do you work remotely or on-site?",
+            "answer": "For website creation, I work exclusively remotely. For long-term assignments, I'm flexible: I can work entirely remotely or travel to the Paris region depending on your preferences and project needs."
+        },
         "cost": {
             "question": "How much does a website cost?",
             "answer": "Since every project is unique, the price varies depending on your needs: custom design, specific features, technical complexity... The more information you provide about your project, the more accurate and transparent a quote I can give you. Don't hesitate to contact me to discuss it!"
         },
         "how_long": {
             "question": "How long does it take to create a website?",
-            "answer": "A landing page can be delivered in 3 days, while a showcase website takes one week. More complex projects with API integration require several weeks, depending on scope and collaboration efficiency."
+            "answer": "A landing page can be delivered in 3 days, while a showcase website generally takes one week. More complex projects with API integration require several weeks, depending on scope and collaboration efficiency."
         },
         "communication": {
             "question": "How does communication work during the project?",
             "answer": "Everything starts with a discovery call to understand your needs. Then, we'll communicate mainly by email or messages to keep a clear record of our exchanges. I'll send you regular progress updates and you'll be able to follow the development at every step."
         },
+        "payments": {
+            "question": "How do payments work?",
+            "answer": "It depends on the type of project. For website creation, I ask for a 50% deposit before starting development, with the remainder paid upon delivery. For long-term freelance assignments, I invoice at a daily rate with a frequency we agree upon together. For maintenance, I offer monthly or annual payment."
+        },
         "dont_like": {
             "question": "What if I don't like the website?",
             "answer": "No worries. Before starting development, I'll present you with a mockup or preview of the final result. You'll be able to give me your feedback at this stage and we'll adjust until we achieve a result that meets your expectations. Nothing is launched without your approval."
         },
-        "payments": {
-            "question": "How do payments work?",
-            "answer": "It depends on the type of project. For website creation, I'll ask for a 50% deposit before starting development. The rest will be paid upon project delivery. For freelance assignments, I offer daily rate or deliverable-based pricing, but we can discuss this together. For maintenance, I offer monthly or annual payment."
-        },
-        "only_online": {
-            "question": "Can I pay only when the site is online?",
-            "answer": "No, because most of the work is done well before the site goes live. I invoice according to the schedule agreed upon at the start. This ensures a regular pace and good organization on both sides."
-        },
         "hosting": {
             "question": "Who handles hosting?",
-            "answer": "You have two options: You manage your own hosting (I'll help you configure it), or I take care of it as part of a monthly maintenance package. I use the same hosting provider for all my clients (unless specifically requested), which makes management simpler and ensures optimal security."
+            "answer": "You have two options: you manage your own hosting (I'll help you configure it), or I take care of it as part of a monthly maintenance package. I use the same hosting provider for all my clients (unless specifically requested), which makes management simpler and ensures optimal security."
         },
         "source_code": {
             "question": "Can I access the source code once the project is completed?",
